--- a/resources/scss/partials/_header.scss
+++ b/resources/scss/partials/_header.scss
@@ -1,11 +1,17 @@
-img {
-    width: 80px;
-}
+header {
 
-.border_nav {
-    height: 100%;
 
-    &:hover {
-        border-bottom: 5px solid #0282f9;
+    & img {
+        width: 80px;
     }
+
+    & .border_nav {
+        height: 100%;
+
+        &:hover {
+            border-bottom: 5px solid #0282f9;
+        }
+    }
+
+
 }
