--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,2 +1,59 @@
 @use '~bootstrap/scss/bootstrap';
 @use './partials/header';
+
+main {
+    & .bg_dark {
+        background-color: #1c1c1c;
+        position: relative;
+        padding: 3rem;
+    }
+
+    & .crop {
+        height: 450px;
+
+        background-image: url(../img/jumbotron.jpg);
+    }
+
+    & .card_header {
+        aspect-ratio: 1;
+    }
+
+    & .current {
+        background-color: #0282f9;
+        color: white;
+        padding: 0.5rem;
+        text-align: center;
+        margin-top: -2rem;
+        display: inline-block;
+        font-size: 1.5rem;
+        position: absolute;
+        top: 0;
+        font-weight: bold;
+    }
+
+    & img {
+        width: 100%;
+
+
+    }
+
+    & .upper {
+        text-transform: uppercase;
+    }
+}
+
+footer {
+    & .band {
+        background-color: #0282f9;
+        color: white;
+
+        & .img_container {
+            display: inline-block;
+            height: 60px;
+            aspect-ratio: 1;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain;
+        }
+    }
+}
