--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -56,4 +56,48 @@ footer {
             background-size: contain;
         }
     }
+
+    & a {
+        text-decoration: none;
+        color: grey;
+    }
+
+    & ul {
+        list-style: none;
+        color: white;
+    }
+
+    & h5 {
+        padding: 1rem 0;
+    }
+
+    & .background {
+        background-image: url(../img/footer-bg.jpg);
+    }
+
+    & .container {
+
+
+
+        & .col-7 {
+            background-image: url(../img/dc-logo-bg.png);
+            background-repeat: no-repeat;
+            background-position: right;
+        }
+    }
+
+    & h5 {
+        color: #0282f9;
+    }
+
+    & .footer_social {
+        background-color: #303030;
+    }
+
+    & .signup {
+        color: white;
+        text-decoration: none;
+        padding: 1rem;
+        border: 2px solid #0282f9;
+    }
 }
