--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,103 +1,4 @@
 @use '~bootstrap/scss/bootstrap';
 @use './partials/header';
-
-main {
-    & .bg_dark {
-        background-color: #1c1c1c;
-        position: relative;
-        padding: 3rem;
-    }
-
-    & .crop {
-        height: 450px;
-
-        background-image: url(../img/jumbotron.jpg);
-    }
-
-    & .card_header {
-        aspect-ratio: 1;
-    }
-
-    & .current {
-        background-color: #0282f9;
-        color: white;
-        padding: 0.5rem;
-        text-align: center;
-        margin-top: -2rem;
-        display: inline-block;
-        font-size: 1.5rem;
-        position: absolute;
-        top: 0;
-        font-weight: bold;
-    }
-
-    & img {
-        width: 100%;
-
-
-    }
-
-    & .upper {
-        text-transform: uppercase;
-    }
-}
-
-footer {
-    & .band {
-        background-color: #0282f9;
-        color: white;
-
-        & .img_container {
-            display: inline-block;
-            height: 60px;
-            aspect-ratio: 1;
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: contain;
-        }
-    }
-
-    & a {
-        text-decoration: none;
-        color: grey;
-    }
-
-    & ul {
-        list-style: none;
-        color: white;
-    }
-
-    & h5 {
-        padding: 1rem 0;
-    }
-
-    & .background {
-        background-image: url(../img/footer-bg.jpg);
-    }
-
-    & .container {
-
-
-
-        & .col-7 {
-            background-image: url(../img/dc-logo-bg.png);
-            background-repeat: no-repeat;
-            background-position: right;
-        }
-    }
-
-    & h5 {
-        color: #0282f9;
-    }
-
-    & .footer_social {
-        background-color: #303030;
-    }
-
-    & .signup {
-        color: white;
-        text-decoration: none;
-        padding: 1rem;
-        border: 2px solid #0282f9;
-    }
-}
+@use './partials/main';
+@use './partials/footer'
